@@ -1,6 +1,7 @@
 package org.jabref.gui.preview;
 
 import java.util.Arrays;
+import java.util.List;
 
 import javafx.scene.input.ClipboardContent;
 
@@ -10,7 +11,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-class CopyCitationActionTest {
+class ClipboardContentGeneratorTest {
 
     @Test
     void processPreviewText() throws Exception {
@@ -38,7 +39,7 @@ class CopyCitationActionTest {
                 OS.NEWLINE +
                 "Abstract:  This entry describes a test scenario which may be useful in JabRef. By providing a test entry it is possible to see how certain things will look in this graphical BIB-file mananger. ";
 
-        ClipboardContent clipboardContent = CopyCitationAction.processPreview(Arrays.asList(citation, citation));
+        ClipboardContent clipboardContent = ClipboardContentGenerator.processPreview(List.of(citation, citation));
         String actual = clipboardContent.getString();
 
         assertEquals(expected, actual);
@@ -91,7 +92,7 @@ class CopyCitationActionTest {
                 "</dd>" + OS.NEWLINE +
                 "<p></p></font>";
 
-        ClipboardContent clipboardContent = CopyCitationAction.processPreview(Arrays.asList(citation, citation));
+        ClipboardContent clipboardContent = ClipboardContentGenerator.processPreview(Arrays.asList(citation, citation));
         String actual = clipboardContent.getString();
         assertEquals(expected, actual);
     }
@@ -102,7 +103,7 @@ class CopyCitationActionTest {
                 "[1]B. Smith, B. Jones, and J. Williams, “Title of the test entry,” BibTeX Journal, vol. 34, no. 3, pp. 45–67, Jul. 2016." + OS.NEWLINE;
 
         String citation = "[1]B. Smith, B. Jones, and J. Williams, “Title of the test entry,” BibTeX Journal, vol. 34, no. 3, pp. 45–67, Jul. 2016." + OS.NEWLINE;
-        ClipboardContent textTransferable = CopyCitationAction.processText(Arrays.asList(citation, citation));
+        ClipboardContent textTransferable = ClipboardContentGenerator.processText(Arrays.asList(citation, citation));
 
         String actual = textTransferable.getString();
         assertEquals(expected, actual);
@@ -132,7 +133,7 @@ class CopyCitationActionTest {
         String citation = "  <div class=\"csl-entry\">" + OS.NEWLINE +
                 "    <div class=\"csl-left-margin\">[1]</div><div class=\"csl-right-inline\">B. Smith, B. Jones, and J. Williams, “Title of the test entry,” <i>BibTeX Journal</i>, vol. 34, no. 3, pp. 45–67, Jul. 2016.</div>" + OS.NEWLINE +
                 "  </div>" + OS.NEWLINE;
-        ClipboardContent htmlTransferable = CopyCitationAction.processHtml(Arrays.asList(citation, citation));
+        ClipboardContent htmlTransferable = ClipboardContentGenerator.processHtml(Arrays.asList(citation, citation));
 
         Object actual = htmlTransferable.getHtml();
         assertEquals(expected, actual);
